minor fixes on mobile responsiveness

--- a/src/components/ui/ProfessorCard.module.css
+++ b/src/components/ui/ProfessorCard.module.css
@@ -1,7 +1,7 @@
 .professor-card{
     display: flex;
     align-items: center;
-    backdrop-filter: blur(16px) saturate(180%);
+    backdrop-filter: blur(20px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
     /* background-color: #1e0149; */
     font-family: 'Poppins',sans-serif;
@@ -24,4 +24,10 @@
     font-size: 0.7rem;
     margin: 2px;
     margin-left: 7px;
+}
+@media screen and (max-width: 768px){
+    .professor-card{
+        width: 80vw;
+    }
+    
 }
